# kubeDimension

./: .gitignore  build.sh  linux-server-heavy.Dockerfile  linux-server-light.Dockerfile  linux-server.Dockerfile
app/kubeDimension/: CMakeLists.txt
app/kubeDimension/app/: CMakeLists.txt  main.cpp
app/kubeDimension/config/: maxfactor8.ini  maxtfactor8.ini
app/kubeDimension/dependencies/bgslibrary/: CMakeLists.txt  run_camera.bat  run_video.bat
app/kubeDimension/dependencies/bgslibrary/java_gui/: run_camera.bat  run_java_gui.bat  run_java_gui_with_console.bat  run_video.bat
app/kubeDimension/dependencies/easyexif/: demo
app/kubeDimension/dependencies/libmill/: Makefile  Makefile.in  config.h  config.status  configure  libmill.la  libmill.pc  libmill_la-utils.lo  libtool  poller.c
app/kubeDimension/dependencies/libsodium/: Makefile  Makefile.in  config.status  configure
app/kubeDimension/dependencies/libuv/: Makefile  config.status  libtool
app/kubeDimension/dependencies/libzmq/: Makefile  Makefile.in  config.status
app/kubeDimension/dependencies/nanomsg/: Makefile  Makefile.in  config.status  configure  libtool  nanocat  tcpmuxd
app/kubeDimension/dependencies/taskqueue/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
app/kubeDimension/include/boost/: b2
app/kubeDimension/include/cpp-netlib-0.11.2-final/: CMakeLists.txt  CTestTestfile.cmake  cppnetlibConfig.cmake  cppnetlibTargets.cmake
app/kubeDimension/include/etcd/: Client.hpp  Response.hpp
app/kubeDimension/include/find_object/: Annoylib.h  Common.h  CvImage.h  CvImageProcessor.h  CvUtil.h  DetectionInfo.h  Exif.h  FindObject.h  HandlerFactory.h  ImageProcessingThread.h  JsonQt.h  KubeServer.h  KubeThread.h  MainHandler.h  RedisQt.h  RestHandler.h  ServerHandler.h  Service.h  Settings.h  TcpServer.h  TcpSingletonServer.h  Thread.h  Worker.h  webserver.h
app/kubeDimension/include/hiredis/: hiredis-test
app/kubeDimension/include/kube_vision/: Version.h
app/kubeDimension/include/nanomsg/: Makefile  config.status  configure  libtool  nanocat  tcpmuxd
app/kubeDimension/include/quasiInvariantFeatures/: CMakeCache.txt  Makefile  cmake_install.cmake  main
app/kubeDimension/include/tufao/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
app/kubeDimension/src/: CMakeLists.txt  CvImage.cpp  CvImageProcessor.cpp  DlibSelectiveSearch.cpp  Exif.cpp  FindObject.cpp  HandlerFactory.cpp  ImageProcessingThread.cpp  JsonQt.cpp  KubeServer.cpp  MainHandler.cpp  Messages_types.cpp  QtOpenCV.cpp  RestHandler.cpp  ServerHandler.cpp  Settings.cpp  TcpOldServer.cpp  TcpServer.cpp  Thread.cpp  ThreadPoolParallel.cpp  ThreadPoolReturnsFuture.cpp  Vocabulary.cpp  Vocabulary.h  Worker.cpp  qeventdispatcher_epoll.cpp  webserver.cpp
app/kubeDimension/src/EtcdCppApi/etcd/: Client.hpp  Response.hpp
app/kubeDimension/src/EtcdCppApi/src/: Client.cpp
app/kubeDimension/src/EtcdCppApi/tst/: Catch.hpp
app/kubeDimension/src/OpenCvCloudLibs/: README.md
app/kubeDimension/src/OpenCvCloudLibs/HADOOPSTREAM+OPENCV/: README.txt  checklog.cpp  facecalmapper.cpp  facecalreducer.cpp  hadoop_streaming.cpp  hadoop_streaming.h  stringsplit.h
app/kubeDimension/src/OpenCvCloudLibs/HIPI+JNI+OPENBR/: FaceDetect.java  FaceDetectInputFormat.java  FaceDetectRecordReader.java  README.txt
app/kubeDimension/src/OpenCvCloudLibs/HIPI+JNI+OPENBR/FaceDetectJNI/: FaceDetectBR.cpp  FaceDetectBR.java  FaceDetectJNI_FaceDetectBR.h
app/kubeDimension/src/OpenCvCloudLibs/HIPI+YARN+SHELL/: FaceDetect.java  FaceDetectInputFormat.java  FaceDetectRecordReader.java  README.txt
app/kubeDimension/src/OpenCvCloudLibs/Preproc/: README.txt  checklog.h  create_feature.cpp  create_feature.h  facecalmapper  facecalmapper.cpp  facecalreducer  facecalreducer.cpp  hadoop_streaming.cpp  hadoop_streaming.h  stringsplit.cpp
app/kubeDimension/src/etcd-cpp-api/tst/: EtcdTest.cpp
app/kubeDimension/src/flann/: CMakeLists.txt
app/kubeDimension/src/kgraph/: fvec2lshkit
app/kubeDimension/src/sphinx/: Makefile  config.status
app/kubeDimension/src/sphinx/config/: config.h
app/kubeDimension/src/sphinx/doc/: Makefile
app/kubeDimension/src/sphinx/libstemmer_c/: Makefile
app/kubeDimension/src/sphinx/src/: Makefile  sphinxversion.h  wordbreaker
app/kubeDimension/src/sphinx/src/.deps/: http_parser.Po  indexer.Po  indextool.Po  searchd.Po  searchdha.Po  searchdhttp.Po  spelldump.Po  sphinx.Po  sphinxaot.Po  sphinxexcerpt.Po  sphinxexpr.Po  sphinxfilter.Po  sphinxjson.Po  sphinxmetaphone.Po  sphinxplugin.Po  sphinxqcache.Po  sphinxquery.Po  sphinxrlp.Po  sphinxrt.Po  sphinxsearch.Po  sphinxsort.Po  sphinxsoundex.Po  sphinxstd.Po  sphinxstemar.Po  sphinxstemcz.Po  sphinxstemen.Po  sphinxstemru.Po  sphinxudf.Po  sphinxutils.Po  tests.Po  wordbreaker.Po
app/kubeDimension/tools/: CMakeLists.txt
app/kubeDimension/tools/CMake-3.4.0/: CMakeCPackOptions.cmake  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  cmake_uninstall.cmake
app/kubeDimension/tools/deepOpenVoc/: meta10K.mat
app/kubeDimension/tools/distributedSearch/: ImageSearch  RecursiveSearch  Search  VideoSearch  WebSearch
app/kubeDimension/tools/tcpRequest/: CMakeLists.txt  MainHandler.cpp  MainHandler.h  PostHandler.cpp  PostHandler.h  TcpResponse.cpp  TcpResponse.h  cvimage.cpp  cvimage.h  cvutil.cpp  cvutil.h  imageprocessingthread.cpp  imageprocessingthread.h  main.cpp  mainhandler.cpp
app/kubeDimension/tools/tcpRequest/bbow/: ASiftDetector.cpp  ASiftDetector.h  BoWBuilder.h  visualindex.cpp
app/kubeDimension/tools/tcpRequest/filters/: preProcessing.cpp
app/kubeDimension/tools/tcpRequest/services/: Common.h  Etcd.hpp  ImageSearch.cc  Messages_reflection.h  Messages_types.cpp  Messages_types.h  RapidReply.hpp  RecursiveSearch.cc  Search.cc  Service.h  SocialSearch.cc  VideoSearch.cc  WebSearch.cc
app/kubeDimension/tools/tcpRequest/utils/: exif.cpp  exif.h  utils.h  webService.cpp
app/kubeDimension/tools/tcpService/: main.cpp
(+1875 files in other folders)
